--- a/recipeStore/src/main/resources/templates/myRecipes.html
+++ b/recipeStore/src/main/resources/templates/myRecipes.html
@@ -45,6 +45,12 @@
 </nav>
 
   <div class="container my-5 col-md-6">
+      <!-- Alert message -->
+      <div th:if="${param.error == 'missing-ingredients'}" class="alert alert-danger alert-dismissible fade show" role="alert">
+        Some ingredients are missing in the ingredients table.
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    
   		<table class="table  table-striped table-hover">
   <thead>
     <tr>
