--- a/recipeStore/src/main/resources/templates/myIngredients.html
+++ b/recipeStore/src/main/resources/templates/myIngredients.html
@@ -27,7 +27,7 @@
           <a class="nav-link text-white" href="available_recipes">Available Recipes</a>
         </li>
          <li class="nav-item">
-          <a class="nav-link text-white" href="my_recipes">My Recipes</a>
+          <a class="nav-link text-white" href="my_recipes">Meal Plan</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-white" href="available_ingredients">Shopping List</a>
